--- a/SoccerHelper/SoccerHelper.csproj
+++ b/SoccerHelper/SoccerHelper.csproj
@@ -62,11 +62,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Classes\Lineup.cs" />
-    <Compile Include="Classes\MatchInfo.cs" />
-    <Compile Include="Classes\Positions.cs" />
+    <Compile Include="Classes\LineUp.cs" />
+    <Compile Include="Classes\MatchHistory.cs" />
+    <Compile Include="Classes\Match.cs" />
+    <Compile Include="Classes\MatchDetails.cs" />
+    <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Team.cs" />
-    <Compile Include="Classes\TeamMember.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
