--- a/SoccerHelper/SoccerHelper.csproj
+++ b/SoccerHelper/SoccerHelper.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Classes\MatchHistory.cs" />
     <Compile Include="Classes\Match.cs" />
     <Compile Include="Classes\MatchDetails.cs" />
+    <Compile Include="Classes\OutputFile.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Team.cs" />
     <Compile Include="MainWindow.xaml.cs">
